--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "mini-ps",
+  "name": "finger-photo",
   "version": "0.0.0",
   "author": "zhaofinger <zhaohaibo1994@gmail.com>",
-  "description": "A similar application to Photoshop",
+  "description": "An application for processing a picture",
   "license": null,
   "main": "./dist/electron/main.js",
   "scripts": {
@@ -96,9 +96,13 @@
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "ts-loader": "^2.3.7",
+    "typescript": "^2.5.3",
     "url-loader": "^0.5.9",
+    "vue-class-component": "^5.0.2",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^13.0.5",
+    "vue-property-decorator": "^5.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.2",
     "webpack": "^3.5.2",
