--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,29 @@
 {
-	"include": [
-		"src/**/*"
-	],
-	"exclude": [
-		"node_modules"
-	],
-	"compilerOptions": {
-		"allowSyntheticDefaultImports": true,
-		"experimentalDecorators": true,
-		"allowJs": true,
-		"module": "es2015",
-		"target": "es5",
-		"moduleResolution": "node",
-		"isolatedModules": true,
-		"lib": [
-			"dom",
-			"es5",
-			"es2015.promise"
-		],
-		"sourceMap": true,
-		"pretty": true
-	}
+  "compilerOptions": {
+    "outDir": "build/dist",
+    "module": "esnext",
+    "target": "es5",
+    "lib": ["es6", "dom"],
+    "sourceMap": true,
+    "allowJs": true,
+    "jsx": "react",
+    "moduleResolution": "node",
+    "rootDir": "src",
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "noUnusedLocals": true
+  },
+  "exclude": [
+    "node_modules",
+    "build",
+    "scripts",
+    "acceptance-tests",
+    "webpack",
+    "jest",
+    "src/setupTests.ts"
+  ]
 }
